[metricClean] More diff progress.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -232,14 +232,9 @@ Warning10Command=diffuseshift;effectperiod,1;effectcolor2,Color("Red");effectcol
 [MenuTimerNoSound]
 
 [MusicWheel]
-FadeSeconds=1
 SwitchSeconds=0.08
-RandomPicksLockedSongs=true
-RouletteSwitchSeconds=0.05
-RouletteSlowDownSwitches=5
 LockedInitialVelocity=7
-ScrollBarHeight=300
-ScrollBarOnCommand=visible,false
+
 ; linear wheel example:
 ;	ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 ;		self:y(offsetFromCenter*38); \
@@ -255,46 +250,25 @@ ScrollBarOnCommand=visible,false
 ;		self:rotationx( rotationx_radians * 180/math.pi );	--[[ to degrees end]] \
 ;	end;
 ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:x( (1-math.cos(offsetFromCenter/math.pi))*44 ); self:y( offsetFromCenter*46 ); end
-NumWheelItems=11
 MusicWheelSortOnCommand=fov,90;
 MusicWheelSortOffCommand=fov,90;
 MusicWheelItemSortOnCommand=zoomy,0;bounceend,0.15;zoomy,1
 MusicWheelItemSortOffCommand=linear,0.175;zoomy,0
 HighlightOnCommand=diffuseshift;effecttiming,(1/8),0,(7/8),0;effectcolor2,Color("White");effectcolor1,color("1,1,1,0.5");effectclock,'beatnooffset'
-HighlightOffCommand=
 HighlightSortOnCommand=stoptweening;decelerate,0.125;glow,Color("Stealth");zoom,1
 HighlightSortOffCommand=stoptweening;accelerate,0.125;glow,Color("Orange");zoom,1.05
 WheelItemOnDelayOffset=0.04
 WheelItemOffDelayOffset=0.04
-WheelItemLockedColor=color("0,0,0,0.5")
-#
-NumSectionColors=1
+
 SectionColor1=Color("Orange")
 #
 SongRealExtraColor=Color("Red")
 SortMenuColor=Color("Orange")
+
 #
-ShowRoulette=true
-ShowRandom=false
-ShowPortal=false
-MostPlayedSongsToShow=30
-#~ ModeMenuChoiceNames="Preferred,Group,Title,Bpm,Popularity,TopGrades,Artist,EasyMeter,MediumMeter,HardMeter,ChallengeMeter,Genre,Length"
-#~ ChoicePreferred="sort,Preferred"
-#~ ChoiceGroup="sort,Group"
-#~ ChoiceTitle="sort,Title"
-#~ ChoiceBpm="sort,BPM"
-#~ ChoicePopularity="sort,Popularity"
-#~ ChoiceTopGrades="sort,TopGrades"
-#~ ChoiceArtist="sort,Artist"
-#~ ChoiceGenre="sort,Genre"
-#~ ChoiceEasyMeter="sort,EasyMeter"
-#~ ChoiceMediumMeter="sort,MediumMeter"
-#~ ChoiceHardMeter="sort,HardMeter"
-#~ ChoiceChallengeMeter="sort,ChallengeMeter"
-#~ ChoiceLength="sort,Length"
-#~ ChoiceCourses="sort,AllCourses;"
+
 UseEasyMarkerFlag=true
-#
+
 
 [CourseWheel]
 
@@ -1500,10 +1474,12 @@ Line18="list,Characters"
 
 [ScreenExit]
 
-[ScreenAttact]
+[ScreenAttract]
 
 [ScreenRanking]
+# 05 # B
 
+# 05 # C
 [ScreenGameplay]
 ShowLifeMeterForDisabledPlayers=false
 #
@@ -2194,6 +2170,11 @@ OptionOrderDown="1:2,2:3,3:4,4:5,5:1"
 [ScreenNetSelectBase]
 
 [ScreenNetSelectMusic]
+BPMDisplayX=SCREEN_CENTER_X-160-90+2
+BPMDisplayY=SCREEN_CENTER_Y+156
+BPMDisplayOnCommand=finishtweening;horizalign,left;strokecolor,Color("Outline");maxwidth,128;addx,320;zoomx,0;decelerate,0.35;addx,-320;zoomx,1
+BPMDisplayOffCommand=bouncebegin,0.15;zoomx,0;
+
 StepsDisplayP1X=SCREEN_CENTER_X-240
 StepsDisplayP1Y=SCREEN_CENTER_Y+185
 StepsDisplayP1OnCommand=horizalign,right;zoomx,0.0;zoomy,0.0;linear,0.5;zoomy,1.0;zoomx,1.0
@@ -2204,10 +2185,7 @@ StepsDisplayP2Y=SCREEN_CENTER_Y+185
 StepsDisplayP2OnCommand=horizalign,right;zoomx,0.0;zoomy,0.0;linear,0.5;zoomy,1.0;zoomx,1.0
 StepsDisplayP2OffCommand=linear,0.5;zoomx,0.0;zoomy,0.0
 #====#
-BPMDisplayX=SCREEN_CENTER_X-160-90+2
-BPMDisplayY=SCREEN_CENTER_Y+156
-BPMDisplayOnCommand=finishtweening;horizalign,left;strokecolor,Color("Outline");maxwidth,128;addx,320;zoomx,0;decelerate,0.35;addx,-320;zoomx,1
-BPMDisplayOffCommand=bouncebegin,0.15;zoomx,0;
+
 #--#
 ShowBPMLabel=true
 BPMLabelX=SCREEN_CENTER_X-160-90
@@ -2254,7 +2232,7 @@ DifficultyDisplayOffCommand=linear,0.25;zoomy,0;
 [ScreenNetEvaluation]
 UserTier02OrBetterCommand=diffuseshift;effectperiod,0.75;effectcolor1,color("1,0.95,0.8,1");effectcolor2,color("0.8,0.95,1,1")
 
-# arcade stuff
+# Arcade
 
 [ScreenLogo]
 TimerSeconds=10
@@ -2294,9 +2272,7 @@ LogoOffCommand=stopeffect;bouncebegin,0.35;rotationz,360;zoom,0
 VersionInfoX=SCREEN_CENTER_X+114
 VersionInfoY=SCREEN_CENTER_Y+44
 VersionInfoOnCommand=settext,ProductVersion();horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.65;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
-
 ScrollerOnCommand=visible,false;
-
 ArcadeOverlay.TextY=SCREEN_BOTTOM-128
 
 [ScreenStageInformation]
@@ -2317,8 +2293,6 @@ ScoreP2OnCommand=visible,false
 StepsDisplayP1OnCommand=zoomy,0;linear,0.3;zoomy,1;sleep,3;smooth,0.5;y,SCREEN_BOTTOM-20;zoomy,0
 StepsDisplayP2OnCommand=zoomy,0;linear,0.3;zoomy,1;sleep,3;smooth,0.5;y,SCREEN_BOTTOM-20;zoomy,0
 ShowBPMDisplay=false
-#
-PlayMusic=false
 
 [ScreenJukeboxMenu]
 
