--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -276,15 +276,11 @@ UseEasyMarkerFlag=true
 
 [MusicWheelItem]
 WheelNotifyIconX=-128-16+0.5
-WheelNotifyIconY=0
 WheelNotifyIconOnCommand=shadowlength,2;
 #
 SongNameX=-120
-SongNameY=0
-SongNameOnCommand=
 #
 CourseX=-120
-CourseY=0
 CourseOnCommand=maxwidth,208;horizalign,left
 #
 SectionExpandedX=-38
@@ -295,11 +291,8 @@ SectionCollapsedX=-38
 SectionCollapsedY=-2
 SectionCollapsedOnCommand=maxwidth,194;shadowlength,1;shadowcolor,color("0.1,0.1,0.1,0.2")
 SectionCountX=112
-SectionCountY=0
 SectionCountOnCommand=zoom,0.75;strokecolor,Color("Outline")
 #
-RouletteX=0
-RouletteY=0
 RouletteOnCommand=maxwidth,400;shadowlength,1;zoom,0.75;rainbowscroll,true;thump,2;
 #
 SortX=-132
@@ -314,7 +307,6 @@ GradeP1X=106+16
 GradeP1Y=-8
 GradeP2X=110+16
 GradeP2Y=8
-GradesShowMachine=true
 
 [NoteField]
 ShowBoard=GAMESTATE:GetCurrentGame():GetName() == "kb7"
@@ -322,9 +314,6 @@ ShowBoard=GAMESTATE:GetCurrentGame():GetName() == "kb7"
 [PlayerStageStats]
 
 [Player]
-# ReceptorArrowsYStandard=GetTapPosition('Standard')
-# ReceptorArrowsYReverse=GetTapPosition('Reverse')
-# RollBodyIncrementsCombo=GetUserPrefB("UserPrefComboOnRolls")
 
 [PlayerOptions]
 
@@ -341,14 +330,7 @@ ShowBoard=GAMESTATE:GetCurrentGame():GetName() == "kb7"
 [RollingNumbersJudgment]
 
 [ScoreDisplayNormal]
-FrameX=
-FrameY=
-FrameOnCommand=
-FrameOffCommand=
-TextX=
-TextY=
 TextOnCommand=shadowlength,1;diffusebottomedge,BoostColor(Color('White'),0.75)
-TextOffCommand=
 
 [ScoreDisplayOni]
 TextX=
@@ -363,30 +345,12 @@ TextOnCommand=shadowlength,1;diffusebottomedge,BoostColor(Color('White'),0.75)
 TextOffCommand=
 
 [ScoreDisplayLifeTime]
-FrameX=
-FrameY=
 FrameOnCommand=visible,false;spin
-FrameOffCommand=
 #
-TimeRemainingX=
 TimeRemainingY=80
 TimeRemainingOnCommand=zoom,1;shadowlength,1;settext,"Hi!";
-TimeRemainingOffCommand=
 #
 DeltaSecondsOnCommand=y,80;settext,Hi;spin;
-DeltaSecondsNoneCommand=
-DeltaSecondsHitMineCommand=
-DeltaSecondsAvoidMineCommand=
-DeltaSecondsCheckpointMissCommand=
-DeltaSecondsCheckpointHitCommand=
-DeltaSecondsMissCommand=
-DeltaSecondsW5Command=
-DeltaSecondsW4Command=
-DeltaSecondsW3Command=
-DeltaSecondsW2Command=
-DeltaSecondsW1Command=
-DeltaSecondsLetGoCommand=
-DeltaSecondsHeldCommand=
 DeltaSecondsGainLifeCommand=zoom,0.5;settext,"Hi!";
 
 [ScoreDisplayPercentage Percent]
@@ -394,44 +358,19 @@ PercentP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);diffusetopedge,B
 PercentP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);diffusetopedge,BoostColor(PlayerColor(PLAYER_2),1.5)
 
 [ScoreDisplayRave]
-MeterP1X=
-MeterP1Y=
 MeterP1OnCommand=draworder,-1
-MeterP1OffCommand=
-MeterP2X=
-MeterP2Y=
 MeterP2OnCommand=draworder,-1;zoomx,-1
-MeterP2OffCommand=
-
-LevelP1X=
-LevelP1Y=
 LevelP1OnCommand=draworder,105;zoom,0.75;diffuse,ColorLightTone( PlayerColor(PLAYER_1) );strokecolor,ColorDarkTone( PlayerColor(PLAYER_1) );x,-144;skewx,-0.125;
-LevelP1OffCommand=
-LevelP2X=
-LevelP2Y=
 LevelP2OnCommand=draworder,105;draworder,105;zoom,0.75;diffuse,ColorLightTone( PlayerColor(PLAYER_2) );strokecolor,ColorDarkTone( PlayerColor(PLAYER_2) );x,144;skewx,-0.125;
-LevelP2OffCommand=
 
 [ScoreKeeperRave]
 
 [ScreenEvaluation Percent]
-# This shouldn't even be named this but whatever man.
-PercentP1X=0
-PercentP1Y=0
+# TODO: Better name?
 PercentP1OnCommand=horizalign,right;shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,ColorDarkTone( PlayerColor(PLAYER_1) );
-PercentP1OffCommand=
-PercentP2X=0
-PercentP2Y=0
 PercentP2OnCommand=horizalign,right;shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,ColorDarkTone( PlayerColor(PLAYER_2) );
-PercentP2OffCommand=
-PercentRemainderP1X=0
-PercentRemainderP1Y=0
 PercentRemainderP1OnCommand=horizalign,left;shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,ColorDarkTone( PlayerColor(PLAYER_1) );
-PercentRemainderP1OffCommand=
-PercentRemainderP2X=0
-PercentRemainderP2Y=0
 PercentRemainderP2OnCommand=horizalign,left;shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,ColorDarkTone( PlayerColor(PLAYER_2) );
-PercentRemainderP2OffCommand=
 DancePointsP1X=0
 DancePointsP1Y=0
 DancePointsP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,ColorDarkTone( PlayerColor(PLAYER_1) );
@@ -441,10 +380,7 @@ DancePointsP2Y=0
 DancePointsP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,ColorDarkTone( PlayerColor(PLAYER_2) );
 DancePointsP2OffCommand=
 DancePointsDigits=2
-PercentUseRemainder=true
 ApplyScoreDisplayOptions=true
-FormatPercentScore=FormatPercentScore
-Format=
 PercentDecimalPlaces=2
 PercentTotalSize=5
 
@@ -457,7 +393,7 @@ PercentTotalSize=5
 [SoundEffectControl_Pitch]
 
 [StepsDisplayListRow]
-#
+# TODO: Make this use DifficultyList?
 CapitalizeDifficultyNames=false
 NumShownItems=5
 ItemsSpacingY=24
@@ -475,17 +411,12 @@ FrameSetCommand=%function(self,param) \
 	end; \
 end;
 #
-ShowTicks=false
 NumTicks=10
 MaxTicks=10
-TicksSetCommand=
 #
 ShowMeter=true
-ZeroMeterString="0"
 MeterX=56
-MeterY=0
 MeterOnCommand=shadowlength,1;zoom,0.65;textglowmode,'TextGlowMode_Inner';
-MeterOffCommand=
 MeterSetCommand=%function(self,param) \
 	if param.CustomDifficulty then \
 		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
@@ -504,9 +435,7 @@ end;
 ShowDescription=true
 DescriptionX=GetGamePrefB("AutoSetStyle") and (-64-8+20) or (-64-8)
 # DescriptionX=GetUserPrefB("UserPrefAutoSetStyle") and (-64-8+20) or (-64-8)
-DescriptionY=0
 DescriptionOnCommand=shadowlength,1;horizalign,left;zoom,0.65;maxwidth,128+8-20;uppercase,true;
-DescriptionOffCommand=
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
 		self:settext("Edit"); \
@@ -522,10 +451,8 @@ AutogenX=0
 AutogenY=0
 #AutogenOnCommand=diffuseshift;effectcolor1,Colors.Alpha( Color("Green") , 0.5 );effectcolor2,ColorLightTone( Color("Green") );
 AutogenOnCommand=blend,Blend.Add;diffuseshift;effectcolor1,color("#FFCC00FF");effectcolor2,color("#FFCC0088");
-AutogenSetCommand=
 #
 ShowStepsType=GetGamePrefB("AutoSetStyle")
-# ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
 StepsTypeX=-64-8
 StepsTypeY=0
 StepsTypeOnCommand=
@@ -591,16 +518,15 @@ end;
 # end;
 TextureCoordScaleX=1
 NumPills=1
-AlwaysBounceNormalBar=false
+
 
 [TextBanner]
 TitleOnCommand=horizalign,left;shadowlength,1;
 SubtitleOnCommand=horizalign,left;shadowlength,1;
 ArtistOnCommand=horizalign,left;shadowlength,1;skewx,-0.2
 ArtistPrependString=""
-AfterSetCommand=%TextBannerAfterSet
 
-[WheelnotifyIcon]
+[WheelNotifyIcon]
 
 [Screen]
 
@@ -608,10 +534,8 @@ AfterSetCommand=%TextBannerAfterSet
 
 [ScreenSystemLayer]
 CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_1);
-CreditsP1OffCommand=
 #
 CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_2);
-CreditsP2OffCommand=
 
 [ScreenConsoleOverlay]
 
@@ -683,7 +607,7 @@ ShowFooter=false
 [ScreenTextEntry]
 QuestionOnCommand=diffuse,Color("Orange");diffusetopedge,BoostColor(Color("Orange"),1.5);wrapwidthpixels,600
 AnswerOnCommand=diffuse,Color("Blue");glowshift;
-KeysInitCommand=zoom,0.8;shadowlength,0
+
 
 [ScreenInit]
 PrepareScreens="ScreenTitleMenu,ScreenTitleJoin"
@@ -694,7 +618,6 @@ PersistScreens="ScreenInit,ScreenTitleJoin,ScreenTitleMenu"
 ShowHeader=false
 ShowFooter=false
 #
-ShowScroller=true
 WrapScroller=false
 ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((28)*(itemIndex-(numItems-1)/2)); end;
 ScrollerSecondsPerItem=0
@@ -786,17 +709,6 @@ FOV=90
 PerChoiceScrollElement=false
 PerChoiceIconElement=false
 #
-DefaultChoice="Single"
-ChoiceNames=GameCompatibleModes()
-#
-OptionOrderAuto="1:2,2:1"
-ChoiceSingle="name,Single;style,single;screen,"..Branch.AfterSelectPlayMode()
-ChoiceDouble="name,Double;style,double;screen,"..Branch.AfterSelectPlayMode()
-ChoiceSolo="name,Solo;style,solo;screen,"..Branch.AfterSelectPlayMode()
-ChoiceVersus="name,Versus;style,versus;screen,"..Branch.AfterSelectPlayMode()
-ChoiceCouple="name,Couple;style,couple;screen,"..Branch.AfterSelectPlayMode()
-ChoiceHalfDouble="name,HalfDouble;style,halfdouble;screen,"..Branch.AfterSelectPlayMode()
-Choice5Keys="name,5Keys;style,single5;;screen,"..Branch.AfterSelectPlayMode()
 Choice7Keys="name,7Keys;style,single7;screen,"..Branch.AfterSelectPlayMode()
 Choice10Keys="name,10Keys;style,double10;screen,"..Branch.AfterSelectPlayMode()
 Choice14Keys="name,14Keys;style,double14;screen,"..Branch.AfterSelectPlayMode()
@@ -1101,23 +1013,7 @@ CDTitleBackCommand=cullmode,'CullMode_Back'
 CDTitleOnCommand=draworder,106;shadowlength,1;zoom,0.75;diffusealpha,1;zoom,0;bounceend,0.35;zoom,0.75;spin;effectmagnitude,0,180,0;
 CDTitleOffCommand=bouncebegin,0.15;zoomx,0;
 #
-ScoreFrameP1X=
-ScoreFrameP1Y=
-ScoreFrameP1OnCommand=visible,false
-ScoreFrameP1OffCommand=
-ScoreP1X=
-ScoreP1Y=
-ScoreP1OnCommand=visible,false
-ScoreP1OffCommand=
 #
-ScoreP2X=
-ScoreP2Y=
-ScoreP2OnCommand=visible,false
-ScoreP2OffCommand=
-ScoreFrameP2X=
-ScoreFrameP2Y=
-ScoreFrameP2OnCommand=visible,false
-ScoreFrameP2OffCommand=
 #
 ScoreP1SortChangeCommand=stoptweening;
 ScoreP2SortChangeCommand=stoptweening;
@@ -1151,12 +1047,6 @@ PercentScoreP2OnCommand=player,PLAYER_2;addy,SCREEN_CENTER_Y;decelerate,0.35;add
 PercentScoreP2OffCommand=bouncebegin,0.15;zoomx,0;
 
 [ScreenSelectCourse]
-#~ ScreenInitCommand=%function(self) \
-	#~ GAMESTATE:ApplyGameCommand("sort,AllCourses",PLAYER_1); \
-	#~ GAMESTATE:ApplyGameCommand("sort,AllCourses",PLAYER_2); \
-#~ end;
-#
-DefaultSort="Nonstop"
 #
 ShowDifficultyList=false
 ShowCourseContentsList=true
@@ -1173,26 +1063,13 @@ ShowPaneDisplayTextP2=false
 [CourseCodeDetector]
 
 [StepsDisplay]
-FrameX=0
-FrameY=0
-FrameOnCommand=
 FrameLoadCommand=%function(self,param) end;
-FrameSetCommand=%function(self,param) \
-	if param.CustomDifficulty then \
-		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
-	end; \
-end;
-#
-ShowTicks=false
 NumTicks=10
 MaxTicks=14
 TicksX=0
 TicksY=0
 TicksOnCommand=shadowlength,0;
 TicksSetCommand=%function(self,param) end;
-#
-ShowMeter=true
-ZeroMeterString="?"
 MeterX=56-32
 MeterY=0
 MeterOnCommand=shadowlength,1;textglowmode,'TextGlowMode_Inner'
@@ -1245,23 +1122,6 @@ StepsTypeOnCommand=zoom,0.45
 [StepsDisplayGameplay]
 Fallback="StepsDisplay"
 
-FrameX=0
-FrameY=0
-FrameOnCommand=
-FrameLoadCommand=%function(self,param) end;
-FrameSetCommand=%function(self,param) \
-	if param.CustomDifficulty then \
-		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
-	end; \
-end;
-#
-ShowTicks=false
-NumTicks=10
-MaxTicks=14
-TicksX=0
-TicksY=0
-TicksOnCommand=shadowlength,0;
-TicksSetCommand=%function(self,param) end;
 #
 ShowMeter=true
 ZeroMeterString="?"
@@ -2274,13 +2134,6 @@ VersionInfoY=SCREEN_CENTER_Y+44
 VersionInfoOnCommand=settext,ProductVersion();horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.65;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
 ScrollerOnCommand=visible,false;
 ArcadeOverlay.TextY=SCREEN_BOTTOM-128
-
-[ScreenStageInformation]
-ForceTimer=true
-TimerOnCommand=visible,false
-TimerSeconds=3
-#
-WaitForChildrenBeforeTweening=true
 
 [ScreenDemonstration]
 SongMeterDisplayOnCommand=visible,false
