[sm130labels] Code ready for testing.
If a mistake was made here,
let the cherry picking/blame game commence!

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -981,6 +981,7 @@ WarpColor=color("1,0,0.5,1")
 TimeSignatureColor=color("1,0.55,0,1")
 TickcountColor=color("0,1,0,1")
 ComboColor=color("0.55,1,0,1")
+LabelColor=color("1,0,0,1")
 #
 BPMIsLeftSide=true
 StopIsLeftSide=true
@@ -989,6 +990,7 @@ WarpIsLeftSide=false
 TimeSignatureIsLeftSide=true
 TickcountIsLeftSide=false
 ComboIsLeftSide=false
+LabelIsLeftSide=false
 #
 BPMOffsetX=60
 StopOffsetX=50
@@ -997,6 +999,7 @@ WarpOffsetX=60
 TimeSignatureOffsetX=30
 TickcountOffsetX=10
 ComboOffsetX=30
+LabelOffsetX=80
 
 [PlayerStageStats]
 # Original CVS Grading
