easier than I thought.

--- a/Themes/themekit/metrics.ini
+++ b/Themes/themekit/metrics.ini
@@ -1,25 +1,40 @@
 [Global]
 FallbackTheme=_fallback
+[ScreenSystemLayer]
+CreditsP1X=SCREEN_CENTER_X-256-32
+CreditsP1Y=SCREEN_BOTTOM-4
+CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_1);
+#
+CreditsP2X=SCREEN_CENTER_X+256+32
+CreditsP2Y=SCREEN_BOTTOM-4
+CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_2);
 [ScreenWithMenuElements]
+# Header ( Top of Screen )
 ShowHeader=true
 HeaderX=SCREEN_CENTER_X
 HeaderY=SCREEN_TOP
 HeaderOnCommand=vertalign,top
 HeaderOffCommand=
-#
+# Text Header ( Text displayed at top of screen on top of header )
+ShowTextHeader=true
+TextHeaderX=SCREEN_CENTER_X-256-32
+TextHeaderY=SCREEN_TOP+32+8-1.5
+TextHeaderOnCommand=horizalign,left;vertalign,bottom;
+TextHeaderOffCommand=
+# Footer ( Bottom Of Screen )
 ShowFooter=true
 FooterX=SCREEN_CENTER_X
 FooterY=SCREEN_BOTTOM
 FooterOnCommand=vertalign,bottom
 FooterOffCommand=
-#
-TimerX=SCREEN_WIDTH-64
-TimerY=SCREEN_TOP+48-4.5
+# Menu Timer
+TimerX=SCREEN_CENTER_X+256+32
+TimerY=SCREEN_TOP+32+8-1.5
 TimerOnCommand=
 TimerOffCommand=
 [MenuTimer]
 # Text
-Text1OnCommand=stopeffect;stoptweening;vertalign,bottom;horizalign,right
+Text1OnCommand=stopeffect;stoptweening;horizalign,right;vertalign,bottom;
 Text1FormatFunction=function(fSeconds) \
 	return string.format("%0.1f", fSeconds); \
 end
