--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2671,8 +2671,8 @@ Line20="conf,VisualDelaySeconds"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
-LineNames="2,3,4,8,11,13,14,15,16,28,29,30"
-Line2="conf,ScoringType"
+LineNames="3,4,8,11,13,14,15,16,28,29,30"
+#Line2="conf,ScoringType"
 Line3="conf,TimingWindowScale"
 Line4="conf,LifeDifficulty"
 Line8="lua,GamePrefDefaultFail()"
