[sm130score] Possibly bad commit, but need a record.
This commit will be reverted if required.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2671,8 +2671,9 @@ Line20="conf,VisualDelaySeconds"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
-LineNames="3,4,8,11,13,14,15,16,28,29,30"
+LineNames="Score,3,4,8,11,13,14,15,16,28,29,30"
 #Line2="conf,ScoringType"
+LineScore="lua,UserPrefSpecialScoringMode()"
 Line3="conf,TimingWindowScale"
 Line4="conf,LifeDifficulty"
 Line8="lua,GamePrefDefaultFail()"
