--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1230,7 +1230,7 @@ LineFlashyCombo="lua,UserPrefFlashyCombo()"
 [ScreenOptionsGraphicsSound]
 
 [ScreenOptionsAdvanced]
-LineNames="3,4,8,11,13,14,15,16,28,29,30,RollCombo"
+LineNames="Score,3,4,8,11,13,14,15,16,28,29,30,RollCombo"
 LineRollCombo="lua,UserPrefComboOnRolls()"
 
 [ScreenAppearanceOptions]
@@ -1245,10 +1245,9 @@ LineRollCombo="lua,UserPrefComboOnRolls()"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
-LineNames="gNotePos,gAuto,gScore,gSScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter"
+LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter"
 LinegNotePos="lua,UserPrefNotePosition()"
 LinegScore="lua,UserPrefGameplayShowScore()"
-LinegSScore="lua,UserPrefSpecialScoringMode()"
 LinegSDisp="lua,UserPrefGameplayShowStepsDisplay()"
 LinegOpts="lua,UserPrefShowLotsaOptions()"
 LinegAuto="lua,UserPrefAutoSetStyle()"
