[sm130score] lua scoring is no longer "special".
It's primarily "it".

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2673,7 +2673,7 @@ NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
 LineNames="Score,3,4,8,11,13,14,15,16,28,29,30"
 #Line2="conf,ScoringType"
-LineScore="lua,UserPrefSpecialScoringMode()"
+LineScore="lua,UserPrefScoringMode()"
 Line3="conf,TimingWindowScale"
 Line4="conf,LifeDifficulty"
 Line8="lua,GamePrefDefaultFail()"
