[sm130attacks] Allow SongAttacks by default.
When SplitTiming gets in, perhaps rename to StepAttacks?

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2289,10 +2289,10 @@ Mines,4="mod,attackmines;name,AttackMines"
 # Mines,4="mod,attackmines;name,AttackMines"
 
 Attacks="3"
-AttacksDefault="mod,no randomattacks,no songattacks"
-Attacks,1="name,Off"
+AttacksDefault="mod,songattacks"
+Attacks,1="mod,no randomattacks,no songattacks;name,Off"
 Attacks,2="mod,randomattacks;name,RandomAttacks"
-Attacks,3="mod,songattacks;name,SongAttacks"
+Attacks,3="name,SongAttacks"
 
 PlayerAutoPlay="2"
 PlayerAutoPlayDefault="mod,no playerautoplay"
