[sm130attacks] Allow attack options in ScreenEdit.
Unfortunately, the previous song attacks by default commit didn't work properly.
Assistance may be needed.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2290,9 +2290,9 @@ Mines,4="mod,attackmines;name,AttackMines"
 
 Attacks="3"
 AttacksDefault="mod,songattacks"
-Attacks,1="mod,no randomattacks,no songattacks;name,Off"
+Attacks,3="mod,no randomattacks,no songattacks;name,Off"
 Attacks,2="mod,randomattacks;name,RandomAttacks"
-Attacks,3="name,SongAttacks"
+Attacks,1="name,SongAttacks"
 
 PlayerAutoPlay="2"
 PlayerAutoPlayDefault="mod,no playerautoplay"
@@ -3620,7 +3620,7 @@ CancelTransitionsOut=true
 PlayMusic=false
 TimerSeconds=-1
 ShowStyleIcon=false
-LineNames="1,2,3,4,5,6,R,7,8,9,10,11,12,13,14,15,16"
+LineNames="1,2,3,4,5,6,R,7,8,9,10,Attacks,11,12,13,14,15,16"
 Line1="list,Speed"
 Line2="list,Accel"
 Line3="list,Effect"
@@ -3632,6 +3632,7 @@ Line7="list,Scroll"
 Line8="list,NoteSkins"
 Line9="list,Holds"
 Line10="list,Mines"
+LineAttacks="list,Attacks"
 Line11="list,Hide"
 Line12="list,Persp"
 Line13="list,Assist"
