add credits to fallback and default themes

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2479,7 +2479,7 @@ Fallback="ScreenOptionsSimpleService"
 NextScreen=Branch.Init()
 PrevScreen=Branch.Init()
 
-LineNames="SystemDirection,KeyConfig,GameType,6,8,Reload,MoreOptions"
+LineNames="SystemDirection,KeyConfig,GameType,6,8,Reload,Credits,MoreOptions"
 # LineNames="SystemDirection,1,2,Sync,13,3,10,11,4,12,6,5,Theme,8,9"
 Line1="gamecommand;screen,ScreenMapControllers;name,Key Joy Mappings"
 Line2="gamecommand;screen,ScreenTestInput;name,Test Input"
@@ -2500,6 +2500,7 @@ LineKeyConfig="gamecommand;screen,ScreenMapControllers;name,Key Joy Mappings"
 LineGameType="gamecommand;screen,ScreenSelectGame;name,Select Game"
 LineSync="gamecommand;screen,ScreenGameplaySyncMachine;name,Calibrate Machine Sync"
 LineReload="gamecommand;screen,ScreenReloadSongs;name,Reload Songs"
+LineCredits="gamecommand;screen,ScreenCredits;name,StepMania Credits"
 LineMoreOptions="gamecommand;screen,ScreenOptionsExtended;name,More Options"
 
 [ScreenOptionsExtended]
@@ -4190,3 +4191,15 @@ StartScreen="ScreenTitleMenu"
 LightsMode="LightsMode_Demonstration"
 ShowCourseModifiersProbability=0
 AllowAdvancedModifiers=true
+
+[ScreenCredits]
+Class="ScreenSplash"
+Fallback="ScreenSplash"
+AllowStartToSkip=true
+NextScreen=Branch.TitleMenu()
+PrevScreen=Branch.TitleMenu()
+TimerSeconds=40
+TimerStealth=true
+ForceTimer=true
+TimerMetricsGroup="MenuTimerNoSound"
+TimerOnCommand=visible,false
