[ScreenEvaluation] Added RollingNumbersClass metric, allowing for the ability to change which RollingNumbers class is loaded.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3243,6 +3243,7 @@ PlayerOptionsHideFailType=false
 MaxComboNumDigits=4
 #
 ShowBannerArea=true
+RollingNumbersClass="RollingNumbersEvaluation"
 ShowSharedJudgmentLineLabels=false
 ShowJudgmentLineW1=false
 ShowJudgmentLineW2=false
