fix RollingNumbersClass in fallback

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3243,7 +3243,7 @@ PlayerOptionsHideFailType=false
 MaxComboNumDigits=4
 #
 ShowBannerArea=true
-RollingNumbersClass="RollingNumbersEvaluation"
+RollingNumbersClass="RollingNumbersJudgment"
 ShowSharedJudgmentLineLabels=false
 ShowJudgmentLineW1=false
 ShowJudgmentLineW2=false
