[ScreenGameplay] Added SongNumberFormat metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3192,6 +3192,7 @@ DebugX=SCREEN_CENTER_X
 DebugY=SCREEN_BOTTOM-72
 DebugOnCommand=zoom,0.75
 #
+SongNumberFormat="%d"
 SongNumberP1X=THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX") - 60
 SongNumberP1Y=SCREEN_TOP+24+7
 SongNumberP1OnCommand=visible,false
