[Banner] Added ScrollSpeedDivisor metric; controls the scroll speed of Random/Roulette banners.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -195,6 +195,8 @@ BottomEdge=SCREEN_BOTTOM
 # Scroll stuff when you roll over it, DDR Extreme style.
 ScrollRandom=false
 ScrollRoulette=false
+# Control how fast the banner scrolls. Higher numbers mean slower.
+ScrollSpeedDivisor=2
 
 [BitmapText]
 # The colors in the 'roulette' text. you can have alot!
