--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -496,6 +496,9 @@ BannerFadeOffCommand=diffusealpha,1;stoptweening;linear,0.25;diffusealpha,0
 # ?
 BannerResetFadeCommand=diffusealpha,1
 
+BannerRouletteCommand=
+BannerRandomCommand=
+
 [Gameplay]
 # System Direction
 ComboIsPerRow=ComboPerRow()
