add ì•…ì „ë°˜ì±„ to the Korean font pages (see issue 226)

--- a/Themes/_fallback/Fonts/_korean 24px.ini
+++ b/Themes/_fallback/Fonts/_korean 24px.ini
@@ -1,4 +1,4 @@
-﻿[common]
+[common]
 Top=5
 Baseline=26
 LineSpacing=28
@@ -42,4 +42,5 @@ line 2=큰탑터투트티펌페
 line 3=폼핑할함해행헤혀
 line 4=환회휘태난터까시
 line 5=간너샐러버문쳐달
-line 6=깡천림홍석
+line 6=깡천림홍석악전반
+line 7=채
