whatever I have done lately.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1760,7 +1760,7 @@ LoadEdits=true
 Fallback="ScreenWithMenuElements"
 Class="ScreenSelectProfile"
 #
-ScreenOnCommand=lockinput,1
+ScreenOnCommand=%function(self) self:lockinput(3); end;
 #
 NextScreen=Branch.AfterSelectProfile()
 PrevScreen=Branch.TitleMenu()
@@ -1773,7 +1773,8 @@ CodeUp="+MenuUp"
 CodeUp2="+Up"
 CodeDown="+MenuDown"
 CodeDown2="+Down"
-CodeStart="Start"
+# Holding Start let us skip ( annoying )
+CodeStart="~Start,+Start"
 CodeBack="Back"
 CodeCenter="Center"
 CodeDownLeft="DownLeft"
@@ -1793,16 +1794,16 @@ DefaultChoice="Single"
 ChoiceNames=GameCompatibleModes()
 #
 OptionOrderAuto="1:2,2:1"
-ChoiceSingle="name,Single;style,single;screen,"..Branch.AfterSelectPlayMode()
-ChoiceDouble="name,Double;style,double;screen,"..Branch.AfterSelectPlayMode()
-ChoiceSolo="name,Solo;style,solo;screen,"..Branch.AfterSelectPlayMode()
-ChoiceVersus="name,Versus;style,versus;screen,"..Branch.AfterSelectPlayMode()
-ChoiceCouple="name,Couple;style,couple;screen,"..Branch.AfterSelectPlayMode()
-ChoiceHalfDouble="name,HalfDouble;style,halfdouble;screen,"..Branch.AfterSelectPlayMode()
-Choice5Keys="name,5Keys;style,single5;;screen,"..Branch.AfterSelectPlayMode()
-Choice7Keys="name,7Keys;style,single7;screen,"..Branch.AfterSelectPlayMode()
-Choice10Keys="name,10Keys;style,double10;screen,"..Branch.AfterSelectPlayMode()
-Choice14Keys="name,14Keys;style,double14;screen,"..Branch.AfterSelectPlayMode()
+ChoiceSingle="name,Single;style,single;text,Single;screen,"..Branch.AfterSelectPlayMode()
+ChoiceDouble="name,Double;style,double;text,Double;screen,"..Branch.AfterSelectPlayMode()
+ChoiceSolo="name,Solo;style,solo;text,Solo;screen,"..Branch.AfterSelectPlayMode()
+ChoiceVersus="name,Versus;style,versus;text,Versus;screen,"..Branch.AfterSelectPlayMode()
+ChoiceCouple="name,Couple;style,couple;text,Couple;screen,"..Branch.AfterSelectPlayMode()
+ChoiceHalfDouble="name,HalfDouble;style,halfdouble;text,HalfDouble;screen,"..Branch.AfterSelectPlayMode()
+Choice5Keys="name,5Keys;style,single5;text,5Keys;screen,"..Branch.AfterSelectPlayMode()
+Choice7Keys="name,7Keys;style,single7;text,7Keys;screen,"..Branch.AfterSelectPlayMode()
+Choice10Keys="name,10Keys;style,double10;text,10Keys;screen,"..Branch.AfterSelectPlayMode()
+Choice14Keys="name,14Keys;style,double14;text,14Keys;screen,"..Branch.AfterSelectPlayMode()
 ChoiceKB7="name,kb7;style,single;screen,"..Branch.AfterSelectPlayMode()
 #
 PerChoiceScrollElement=false
@@ -1823,7 +1824,7 @@ PrevScreen=Branch.TitleMenu()
 #
 TimerSeconds=40
 #
-DefaultChoice="Easy"
+DefaultChoice="Normal"
 ChoiceNames="Normal,Rave,Extended,Oni,Endless"
 #
 PerChoiceScrollElement=false
@@ -1833,13 +1834,13 @@ ShowScroller=true
 WrapScroller=true
 ShowIcon=false
 #
-ChoiceEasy="applydefaultoptions;name,Easy;playmode,regular;difficulty,easy;screen,ScreenSelectMusic;setenv,sMode,Normal"
-ChoiceNormal="applydefaultoptions;name,Normal;playmode,regular;difficulty,easy;screen,ScreenSelectMusic;setenv,sMode,Normal"
-ChoiceHard="applydefaultoptions;name,Hard;playmode,regular;difficulty,hard;screen,ScreenSelectMusic;setenv,sMode,Normal"
-ChoiceRave="applydefaultoptions;name,Rave;playmode,rave;screen,ScreenSelectMusic;setenv,sMode,Rave"
-ChoiceExtended="applydefaultoptions;name,Extended;playmode,nonstop;screen,ScreenSelectCourse;setenv,sMode,Extended"
-ChoiceOni="applydefaultoptions;name,Oni;playmode,oni;screen,ScreenSelectCourse;setenv,sMode,Oni"
-ChoiceEndless="applydefaultoptions;name,Endless;playmode,endless;screen,ScreenSelectCourse;setenv,sMode,Endless"
+ChoiceEasy="applydefaultoptions;name,Easy;text,Easy;playmode,regular;difficulty,easy;screen,ScreenSelectMusic;setenv,sMode,Normal"
+ChoiceNormal="applydefaultoptions;name,Normal;text,Normal;playmode,regular;difficulty,easy;screen,ScreenSelectMusic;setenv,sMode,Normal"
+ChoiceHard="applydefaultoptions;name,Hard;text,Hard;playmode,regular;difficulty,hard;screen,ScreenSelectMusic;setenv,sMode,Normal"
+ChoiceRave="applydefaultoptions;name,Rave;text,Rave;playmode,rave;screen,ScreenSelectMusic;setenv,sMode,Rave"
+ChoiceExtended="applydefaultoptions;name,Extended;text,Extended;playmode,nonstop;screen,ScreenSelectCourse;setenv,sMode,Extended"
+ChoiceOni="applydefaultoptions;name,Oni;text,Oni;playmode,oni;screen,ScreenSelectCourse;setenv,sMode,Oni"
+ChoiceEndless="applydefaultoptions;name,Endless;text,Endless;playmode,endless;screen,ScreenSelectCourse;setenv,sMode,Endless"
 
 [ScreenSelectCharacter]
 Class="ScreenSelectMaster"
