--- a/Themes/themekit/metrics.ini
+++ b/Themes/themekit/metrics.ini
@@ -279,17 +279,64 @@ IconChoiceEndlessDisabledCommand=diffuse,color("1,0,0,0.5");
 IconChoiceEndlessOffUnfocusedCommand=linear,0.1175;zoomx,0
 IconChoiceEndlessOffFocusedCommand=stopeffect;sleep,0
 [ScreenSelectMusic]
+ShowStepsDisplayP1=true
+StepsDisplayP1X=SCREEN_CENTER_X-192
+StepsDisplayP1Y=SCREEN_BOTTOM-64
+StepsDisplayP1OnCommand=
+StepsDisplayP1OffCommand=
+#
+ShowStepsDisplayP2=true
+StepsDisplayP2X=SCREEN_CENTER_X-192
+StepsDisplayP2Y=SCREEN_BOTTOM-64
+StepsDisplayP2OnCommand=
+StepsDisplayP2OffCommand=
+#
 MusicWheelX=SCREEN_RIGHT-128-18
 MusicWheelOnCommand=draworder,-1
 [MusicWheel]
+HighlightOnCommand=blend,Blend.Add;diffuseramp;effectclock,'beatnooffset'
+#
 ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:x( (1-math.cos(offsetFromCenter/math.pi))*0 ); self:y( offsetFromCenter*48  ); end
 NumWheelItems=13
 [MusicWheelItem]
 # Move Song all the way to the left, since it is left aligned
 # see [TextBanner]
 SongNameX=-124
+# 
+SectionExpandedX=-126
+SectionExpandedY=0
+SectionExpandedOnCommand=horizalign,left;maxwidth,252;shadowlength,1
+#
+SectionCollapsedX=-126
+SectionCollapsedY=0
+SectionCollapsedOnCommand=horizalign,left;maxwidth,252;shadowlength,1
+#
+SectionCountX=108
+SectionCountY=16
+SectionCountOnCommand=zoom,0.5;shadowlength,1;
 [TextBanner]
 TitleOnCommand=horizalign,left;shadowlength,1;
 SubtitleOnCommand=horizalign,left;shadowlength,1;
 ArtistOnCommand=horizalign,left;shadowlength,1;skewx,-0.2
 ArtistPrependString=""
+[StepsDisplay]
+ShowMeter=true
+ZeroMeterString="?"
+MeterX=92
+MeterY=0
+MeterOnCommand=horizalign,right;zoom,0.75;shadowlength,1
+MeterSetCommand=%function(self,param) \
+	if param.CustomDifficulty then \
+		self:diffuse(CustomDifficultyToLightColor(param.CustomDifficulty)); \
+	end \
+end;
+#
+ShowDescription=true
+DescriptionX=-92
+DescriptionY=0
+DescriptionOnCommand=horizalign,left;zoom,0.75;shadowlength,1;uppercase,true;
+DescriptionSetCommand=%function(self,param) \
+	if param.CustomDifficulty then \
+		self:diffuse(CustomDifficultyToLightColor(param.CustomDifficulty)); \
+	end \
+end;
