[UnlockEntry] Added GetCourse, GetCode Lua bindings. [UnlockManager] Added UnlockRequirement_NumUnlocked enum.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -123,10 +123,36 @@ UnlockColor=color("1,0.5,0,1")
 ExtraColor=color("#ff0000")	-- red
 
 [UnlockManager]
-# Unlock specific things. we'll go in-depth with this one day, but it really
-# isnt what sm-ssc was designed for.
+# Unlock specific things.
 AutoLockChallengeSteps=false
 UnlockNames=""
+
+# useful commands:
+# require,(UnlockRequirement),(value);
+# where (UnlockRequirement) is one of the UnlockRequirement enums.
+
+# song,(Song Name);
+# sets a Song to be unlocked
+
+# course,(Course Name);
+# sets a Course to be unlocked
+
+# roulette;
+# Song shows up in roulette (useful with Song only)
+
+# mod,(modifier);
+# sets a modifier to be unlocked.
+
+# code,(code);
+# assigns a code to the unlock
+
+# examples:
+# 1) The song "Pledge" requires 500 AP.
+# Unlock1Command=song,"Pledge";require,"UnlockRequirement_ArcadePoints",500
+
+# 2) The song "ABC" can be unlocked via roulette; pick an arbitrary code
+# to use to store the unlock.
+# Unlock2Command=song,"ABC";code,"59183751";roulette
 
 # 03 # 
 
