--- a/configure.ac
+++ b/configure.ac
@@ -268,6 +268,9 @@ AC_CHECK_DECL(strtof, , AC_DEFINE([NEED_STRTOF],1,[Need strtof]), [#include <std
 
 AC_CHECK_DECLS([SIGPWR, SIGUSR1],,,[#include <signal.h>])
 
+# Yeah, StepMania doesn't actually need a copy of GLEW this new.
+PKG_CHECK_MODULES( [GLEW], [glew > 1.5.2], LIBS="$LIBS -lGLEW" )
+
 AC_ARG_ENABLE(tests, AS_HELP_STRING([--enable-tests],[Build test programs]), enable_tests=$enableval, enable_tests=no)
 AM_CONDITIONAL(BUILD_TESTS, test "$enable_tests" = "yes" )
 
