[ScreenSelectMusic] Added NullScoreString metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1974,6 +1974,8 @@ CDTitleBackCommand=
 CDTitleOnCommand=visible,false
 CDTitleOffCommand=
 #
+NullScoreString=string.format("% 9i",0)
+#
 ScoreFrameP1X=
 ScoreFrameP1Y=
 ScoreFrameP1OnCommand=visible,false
