[sm130futures] Irrelevant change.
I just don't want a closed branch to show up
on Google Code by default.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1,6 +1,5 @@
 # This probably is hard to understand from the way it was made in the first 
-# place, so instead just pay attention to each group, which has tons of
-# notes
+# place, so instead just pay attention to each group, which has tons of notes.
 
 # 01 # Global
 # 02 # Managers
