Let's redo the [Xcode4] branch!
Hopefully we've learned our lesson from last time.

--- a/.hgignore
+++ b/.hgignore
@@ -47,7 +47,7 @@ Docs/doxygen
 PBProject/build
 Xcode/build
 *.xcodeproj/xcuserdata
-*.xcodeproj/project.xcworkspace/xcuserdata
+*.xcodeproj/project.xcworkspace
 src/build-*
 src/Release-*
 src/libtomcrypt/build-*
