[Xcode4] Intel only.
The plist change is due to the Music Games category set.

--- a/Xcode/Info-StepMania.plist
+++ b/Xcode/Info-StepMania.plist
@@ -47,6 +47,8 @@
 	<string>Step</string>
 	<key>CFBundleVersion</key>
 	<string>PRODUCT_VER_BARE</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.music-games</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.4.10</string>
 	<key>NSHumanReadableCopyright</key>
